--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "author": "Kristofer M White",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "path": "^0.12.7",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
