--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "repository": "git@github.com:kmwhite/balance_sheet-api.git",
   "author": "Kristofer M White",
   "license": "BSD-2-Clause",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
   "dependencies": {
+    "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
