--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "path": "^0.12.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "semantic-ui-react": "^0.76.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
